objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>RICEFW_Complexity__c</fullName>
        <formula>TEXT(RICEFW_Inventory_Name__r.Complexity__c)</formula>
        <label>RICEFW Complexity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_ID__c</fullName>
        <formula>IF(RICEFW_Inventory_Name__c != null,RICEFW_Inventory_Name__r.RICEFW_ID__c, null)</formula>
        <inlineHelpText>Release + RICEFW Object + RICEFW #</inlineHelpText>
        <label>RICEFW ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_Inventory_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose a RICEFW Inventory record to fill the gap. You may need to create a RICEFW Inventory record if the applicable one does not yet exist.</inlineHelpText>
        <label>RICEFW Inventory Name</label>
        <referenceTo>RICEFW_Inventory__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RICEFW_New_Modified__c</fullName>
        <formula>TEXT(RICEFW_Inventory_Name__r.New_Modified__c)</formula>
        <label>RICEFW New / Modified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_Object__c</fullName>
        <formula>RICEFW_Inventory_Name__r.RecordType.Name</formula>
        <label>RICEFW Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_Priority__c</fullName>
        <formula>TEXT( RICEFW_Inventory_Name__r.Priority__c)</formula>
        <label>RICEFW Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_System_Impacted__c</fullName>
        <formula>TEXT(RICEFW_Inventory_Name__r.System_Impacted__c)</formula>
        <label>RICEFW System Impacted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_Type__c</fullName>
        <formula>TEXT(RICEFW_Inventory_Name__r.Type__c)</formula>
        <label>RICEFW Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Business_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Business Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reestimate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regions_Impacted__c</fullName>
        <description>Regions that get impacted due to this requirement.</description>
        <inlineHelpText>Regions that get impacted due to this requirement.</inlineHelpText>
        <label>Regions Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regions_Requesting__c</fullName>
        <description>Regions where the request needs to be build</description>
        <label>Regions Requesting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Archived_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Archived Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Requests (Related Archived Request)</relationshipLabel>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Requests (Related Request)</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release in which the request will go</description>
        <inlineHelpText>The release in which the request will actually be deployed. If the requirement has not been approved for a release, there should not be a value in this field.</inlineHelpText>
        <label>Committed Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Requests (Committed Release)</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed_From_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release from which the request has been removed</description>
        <label>Removed From Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Requests (Removed From Release)</relationshipLabel>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify requests removed from a scheduled release.</description>
        <inlineHelpText>Indicate that a Request was removed from a Release only if it is removed after Design is complete.</inlineHelpText>
        <label>Removed from Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Requirement Gathering.</description>
        <inlineHelpText>Number of days estimated for Requirement Gathering.</inlineHelpText>
        <label>Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <description>Gathers further details for requirements.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Detailed Summary* 
Screen(s) Impacted* 
Field Name(s) &amp; Type(s)* 
Picklist Values 
Calculation 
Dependency 
Workflow/Approval Rules 
Interfacing System Updates 
Interface Frequency 
Data Volumes 
*Indicates information required for all requests!</inlineHelpText>
        <label>Request Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Title__c</fullName>
        <description>Captures the requirement title</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures the requirement title</inlineHelpText>
        <label>Request Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Type of the request</description>
        <inlineHelpText>If you are unsure of the type of request you are submitting, please select Unknown.</inlineHelpText>
        <label>Request Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Configuration</fullName>
                </value>
                <value>
                    <fullName>Salesforce Custom Code</fullName>
                </value>
                <value>
                    <fullName>Vlocity</fullName>
                    <label>Vlocity Configuration</label>
                </value>
                <value>
                    <fullName>Vlocity Custom Code</fullName>
                </value>
                <value>
                    <fullName>Out of the Box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of the person originally submitting the request.</description>
        <inlineHelpText>Name of the person originally submitting the request.</inlineHelpText>
        <label>Requestor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_Type__c</fullName>
        <label>Requirement Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Detailed Business Requirement</fullName>
                </value>
                <value>
                    <fullName>High Level Business Requirement</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                    <default>true</default>
                    <label>Technical</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_with_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review with Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for completing SIT.</description>
        <inlineHelpText>Number of days estimated for completing SIT.</inlineHelpText>
        <label>Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOURCE_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SOURCE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Solution Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartTime_Approve_to_Estimate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime Approve to Estimate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Approved_Emergency_Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Approved Emergency Release</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Approved_to_Deploy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Approved to Deploy</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Build_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Build Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Build__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Build</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Deferred__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Deferred</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Deployed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Deployed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Design__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Design</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Duplicate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Duplicate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Emergency_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_ Emergency Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Identify_Change_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Identify: Change Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Identify_New_Requirement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Identify: New Requirement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Identify_OnHoldWaitingonClient__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Identify_OnHoldWaitingonClient</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Identify_Submit_for_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Identify: Submit for Business</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Level_of_Effort_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Level of Effort Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_No_Build_Req__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_No Build Req</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Rejected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_SIT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_SIT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Test_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Test Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Test</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_UAT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_UAT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the request</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identify: New Requirement</fullName>
                    <default>true</default>
                    <label>Identify: New Requirement</label>
                </value>
                <value>
                    <fullName>Identify: Submit for Business Review</fullName>
                </value>
                <value>
                    <fullName>Identify: Validated by Business</fullName>
                </value>
                <value>
                    <fullName>Identify: Deferred</fullName>
                </value>
                <value>
                    <fullName>Identify: RFQ</fullName>
                </value>
                <value>
                    <fullName>Consolidate: Approve to Estimate</fullName>
                </value>
                <value>
                    <fullName>Consolidate: Level of Effort Complete</fullName>
                </value>
                <value>
                    <fullName>Approve: Approved to Deploy</fullName>
                </value>
                <value>
                    <fullName>Release: Design</fullName>
                </value>
                <value>
                    <fullName>Release: Build</fullName>
                </value>
                <value>
                    <fullName>Release: Test</fullName>
                </value>
                <value>
                    <fullName>Release: SIT</fullName>
                </value>
                <value>
                    <fullName>Release: UAT</fullName>
                </value>
                <value>
                    <fullName>Release: Build Production</fullName>
                </value>
                <value>
                    <fullName>Release: Test Production</fullName>
                </value>
                <value>
                    <fullName>Close: Deployed</fullName>
                </value>
                <value>
                    <fullName>Close: Rejected</fullName>
                </value>
                <value>
                    <fullName>Close: Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StopTime_Approve_to_Estimate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Approve to Estimate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Approved_Emergency_Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Approved Emergency Release</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Approved_to_Deploy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Approved to Deploy</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Build_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Build Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Build__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Build</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Deferred__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Deferred</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Deployed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Deployed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Design__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Design</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Duplicate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Duplicate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Emergency_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_ Emergency Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Identify_Change_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Identify: Change Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Identify_New_Requirement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Identify: New Requirement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Identify_OnHoldWaitingonClient__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Identify_OnHoldWaitingonClient_</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Identify_Submit_for_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Identify: Submit for Business</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Level_of_Effort_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Level of Effort Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_No_Build_Req__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_No Build Req</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Rejected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_SIT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_SIT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Test_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Test Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_Test</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopTime_UAT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StopTime_UAT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_Capability__c</fullName>
        <label>Sub-Capability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIF Consistency</fullName>
                </value>
                <value>
                    <fullName>CIF Automation</fullName>
                </value>
                <value>
                    <fullName>CIP Management</fullName>
                </value>
                <value>
                    <fullName>E-Signature</fullName>
                </value>
                <value>
                    <fullName>Opportunity Cloning</fullName>
                </value>
                <value>
                    <fullName>Opportunity Type Guidance</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Brokerage &amp; Consultants</fullName>
                </value>
                <value>
                    <fullName>Account Competitors</fullName>
                </value>
                <value>
                    <fullName>Completion Markers</fullName>
                </value>
                <value>
                    <fullName>Product Selection Guidance</fullName>
                </value>
                <value>
                    <fullName>Product Playbook Access</fullName>
                </value>
                <value>
                    <fullName>Opportunity &amp; Product Stage Alignment</fullName>
                </value>
                <value>
                    <fullName>Creation of HPCC (Clinical Products)</fullName>
                </value>
                <value>
                    <fullName>Vendor Specific Document Generation</fullName>
                </value>
                <value>
                    <fullName>Vendor Plan Association</fullName>
                </value>
                <value>
                    <fullName>Castlight/Alegeus Vendor Process</fullName>
                </value>
                <value>
                    <fullName>Wizard Driven UI Workflow</fullName>
                </value>
                <value>
                    <fullName>Revision Status Tracking</fullName>
                </value>
                <value>
                    <fullName>CIP Approval</fullName>
                </value>
                <value>
                    <fullName>Product Approval</fullName>
                </value>
                <value>
                    <fullName>SME Approvals</fullName>
                </value>
                <value>
                    <fullName>iPad Interface to gather data</fullName>
                </value>
                <value>
                    <fullName>Contract, PG Document Generation</fullName>
                </value>
                <value>
                    <fullName>CLM Components: Booklets/SBCs</fullName>
                </value>
                <value>
                    <fullName>Revision Identification</fullName>
                </value>
                <value>
                    <fullName>Document Locking</fullName>
                </value>
                <value>
                    <fullName>Document Storage</fullName>
                </value>
                <value>
                    <fullName>Automated SME Notifications</fullName>
                </value>
                <value>
                    <fullName>Document/Product Change Notification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Impacted__c</fullName>
        <description>Systems which gets impacted from the request</description>
        <inlineHelpText>Systems that get impacted due to this requirement.</inlineHelpText>
        <label>Systems Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Objects</fullName>
                </value>
                <value>
                    <fullName>Customer Master Database (CMD)</fullName>
                </value>
                <value>
                    <fullName>Enterprise Data Warehouse (EDW)</fullName>
                </value>
                <value>
                    <fullName>Outlook</fullName>
                </value>
                <value>
                    <fullName>STARS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No Systems Impacted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Description__c</fullName>
        <description>Technical description of the request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Technical Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <description>Test case for the request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Case</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Total__c</fullName>
        <description>Estimated Level of Effort (Hours) for testing of the request</description>
        <label>Test Total</label>
        <summarizedField>Application_Inventory__c.Total_Test__c</summarizedField>
        <summaryForeignKey>Application_Inventory__c.Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Approve_to_Estimate__c</fullName>
        <formula>IF( ISBLANK(StopTime_Approve_to_Estimate__c) ,
	(Now() - StartTime_Approve_to_Estimate__c)*24*60 ,
	(StopTime_Approve_to_Estimate__c - StartTime_Approve_to_Estimate__c)*24*60)</formula>
        <label>Approve to Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Approved_Emergency_Release__c</fullName>
        <formula>IF( ISBLANK(StopTime_Approved_Emergency_Release__c) ,
	(Now() - StartTime_Approved_Emergency_Release__c)*24*60 ,(StopTime_Approved_Emergency_Release__c - StartTime_Approved_Emergency_Release__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeSpentOn_Approved Emergency Release</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Approved_to_Deploy__c</fullName>
        <formula>IF( ISBLANK(StopTime_Approved_to_Deploy__c) ,
	(Now() - StartTime_Approved_to_Deploy__c)*24*60 ,(StopTime_Approved_to_Deploy__c - StartTime_Approved_to_Deploy__c)*24*60)</formula>
        <label>Approved to Deploy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Build_Production__c</fullName>
        <formula>IF( ISBLANK(StopTime_Build_Production__c) ,
	(Now() - StartTime_Build_Production__c)*24*60 ,(StopTime_Build_Production__c - StartTime_Build_Production__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Build Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Build__c</fullName>
        <formula>IF( ISBLANK(StopTime_Build__c) ,
	(Now() - StartTime_Build__c)*24*60 ,(StopTime_Build__c - StartTime_Build__c)*24*60)</formula>
        <label>Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Deferred__c</fullName>
        <formula>IF( ISBLANK(StopTime_Deferred__c) ,
	(Now() - StartTime_Deferred__c)*24*60 ,(StopTime_Deferred__c - StartTime_Deferred__c)*24*60)</formula>
        <label>Deferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Deployed__c</fullName>
        <formula>IF( ISBLANK(StopTime_Deployed__c) ,
	(Now() - StartTime_Deployed__c)*24*60 ,(StopTime_Deployed__c - StartTime_Deployed__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Design__c</fullName>
        <formula>IF( ISBLANK(StopTime_Design__c) ,
	(Now() - StartTime_Design__c)*24*60 ,(StopTime_Design__c - StartTime_Design__c)*24*60)</formula>
        <label>Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Duplicate__c</fullName>
        <formula>IF( ISBLANK(StopTime_Duplicate__c) ,
	(Now() - StartTime_Duplicate__c)*24*60 ,(StopTime_Duplicate__c - StartTime_Duplicate__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Emergency_Request__c</fullName>
        <formula>IF( ISBLANK(StopTime_Emergency_Request__c) ,
	(Now() - StartTime_Emergency_Request__c)*24*60 ,(StopTime_Emergency_Request__c - StartTime_Emergency_Request__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeSpentOn_Emergency Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Identify_Change_Request__c</fullName>
        <formula>IF( ISBLANK(StopTime_Identify_Change_Request__c) ,
	(Now() - StartTime_Identify_Change_Request__c)*24*60 ,(StopTime_Identify_Change_Request__c - StartTime_Identify_Change_Request__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeSpentOn_Identify Change Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Identify_New_Requirement__c</fullName>
        <formula>IF( ISBLANK(StopTime_Identify_New_Requirement__c) ,
	(Now() - StartTime_Identify_New_Requirement__c)*24*60 , (StopTime_Identify_New_Requirement__c - StartTime_Identify_New_Requirement__c)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identify: New Requirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Identify_OnHoldWaitingonClie__c</fullName>
        <label>TimeSpentOn_Identify_OnHoldWaitingonClie</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeSpentOn_Level_of_Effort_Complete__c</fullName>
        <formula>IF( ISBLANK(StopTime_Level_of_Effort_Complete__c) ,
	(Now() - StartTime_Level_of_Effort_Complete__c)*24*60 ,(StopTime_Level_of_Effort_Complete__c - StartTime_Level_of_Effort_Complete__c)*24*60)</formula>
        <label>Level of Effort Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>